--- a/compodoc.html
+++ b/compodoc.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="compodoc.css" type="text/css">
 </head>
+
 <body>
     <div class="top_content">
         <nav class="top_content_nav">
             <div class="nav_header">
-                <a  href=""><img class="nav_headimg" src="./images/logo.png"></a>
+                <a href=""><img class="nav_headimg" src="./images/logo.png"></a>
                 <div class="nav_right">
                     <ul class="nav_right_menu">
                         <li class="menu_li"><a href="">Getting started</a></li>
@@ -24,9 +26,21 @@
                     </ul>
                 </div>
             </div>
-            
+
         </nav>
+        <div class="inner_bg">
+            <div class="container">
+                <div class="container_inner">
+                    <h1 class="container_title">The missing documentation tool for you <br> <b>Angular</b> application</h1>
+                    <p class="container_describe">Generate your Angular project documentation in <b>seconds.</b></p>
+                        <p class="container_describe">Compodoc comes with a lot of features. Check it out now!</p>
+                </div>
+
+            </div>
+
+        </div>
 
     </div>
 </body>
+
 </html>
