--- a/compodoc.html
+++ b/compodoc.html
@@ -151,7 +151,7 @@
             </div>
             <div class="themes">
                 <img src="./images/theme-laravel.png" alt="">
-                <p>Gitbook</p>
+                <p>Laravel</p>
             </div>
 
         </div>
@@ -159,11 +159,11 @@
         <div class="beautiful_themes_row themes_two" >
             <div class="themes">
                 <img src="./images/theme-postmark.png" alt="">
-                <p>Gitbook</p>
+                <p>Postmark</p>
             </div>
             <div class="themes">
                 <img src="./images/theme-readthedocs.png" alt="">
-                <p>Gitbook</p>
+                <p>Readthedocs</p>
             </div>
 
         </div>
@@ -171,11 +171,11 @@
         <div class="beautiful_themes_row">
             <div class="themes">
                 <img src="./images/theme-stripe.png" alt="">
-                <p>Gitbook</p>
+                <p>Stripe</p>
             </div>
             <div class="themes">
                 <img src="./images/theme-vagrant.png" alt="">
-                <p>Gitbook</p>
+                <p>Vagrant</p>
             </div>
 
         </div>
