--- a/compodoc.html
+++ b/compodoc.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="compodoc.css" type="text/css">
-    <link rel="stylesheet" href="at.alicdn.com/t/font_1849092_bcuxc99a6f7.css" type="text/css">
+    <link rel="stylesheet" href=https://at.alicdn.com/t/font_1849092_bcuxc99a6f7.css type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.1/css/swiper.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.1/js/swiper.min.js"></script>
     <script language="javascript">
@@ -36,7 +36,7 @@
                             <a href=""><i class="iconfont icon-shu"></i>Changelog</a>
                         </li>
                         <li class="menu_li">
-                            <a href=""><i class="iconfont">&#xe68b;</i>GitHub</a>
+                            <a href=""><i class="iconfont">&#xe741;</i>GitHub</a>
                         </li>
                     </ul>
                 </div>
@@ -94,34 +94,34 @@
     <div class="feature_box">
         <table class="feature_box_table">
             <tr>
-                <td class="feature_box_table_td">
+                <td class="feature_box_table_td box_table_td_one">
                     <img src="./images/feature1.PNG">
                     <h3>Angular friendly</h3>
                     <p>Compodoc supports all major APIs of Angular</p>
                 </td>
-                <td class="feature_box_table_td">
+                <td class="feature_box_table_td box_table_td_one">
                     <img src="./images/feature2.PNG">
                     <h3>Open-source and on npm</h3>
                     <p>Use it directly in your project using npm and one script, that's it !</p>
                 </td>
-                <td class="feature_box_table_td">
+                <td class="feature_box_table_td box_table_td_one">
                     <img src="./images/feature3.PNG">
                     <h3>Local tool</h3>
                     <p>No server needed, no sources uploaded online</p>
                 </td>
             </tr>
             <tr>
-                <td class="feature_box_table_td">
+                <td class="feature_box_table_td box_table_td_two">
                     <img src="./images/feature4.PNG">
                     <h3>Beautiful themes</h3>
                     <p>7 themes are available from famous<br> documentation tools like Gitbook, Read the Docs or projects like Vagrant, Laravel, Postmark and Stripe</p>
                 </td>
-                <td class="feature_box_table_td">
+                <td class="feature_box_table_td box_table_td_two">
                     <img src="./images/feature5.PNG">
                     <h3>Search engine</h3>
                     <p>Compodoc include a powerful search engine (lunr.js) for easily finding your information</p>
                 </td>
-                <td class="feature_box_table_td">
+                <td class="feature_box_table_td box_table_td_two">
                     <img src="./images/feature6.PNG">
                     <h3>Responsive Design</h3>
                     <p>The generated pages display very well on mobile, tablet and desktop</p>
@@ -235,7 +235,7 @@
             <a href=""><img src="./images/11.png" alt=""height="64px"></a>
             <a href=""><img src="./images/12.svg" alt=""height="64px"></a>
         </div>
-        <a class="logo" href=""> </a>
+        <a class="logo"><i class="iconfont">&#xe653;</i></a>
         <p class="footer_text">MIT © 2016-2017 - <span style="color: royalblue;"> Vincent Ogloblinsky</span></p>
     </footer>
 </body>
